# lab10

./: .gitignore  PROMPT_LOG.md  README.md
h1/: docker-compose.yml
h1/go-service/: Dockerfile  go.mod  main.go  main_test.go
h1/go-service/auth/: jwt.go
h1/go-service/handlers/: handlers.go
h1/go-service/middleware/: auth.go
h1/python-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
h1/python-service/auth/: __init__.py  jwt_validator.py
h1/python-service/tests/: test_jwt_validator.py  test_main.py
m1/: go.mod  main.go  main_test.go
m1/handlers/: task.go
m1/middleware/: logger.go
m1/models/: task.go
m2/: go.mod  validator.go  validator_test.go
m3/fastapi-service/: pyproject.toml
m3/fastapi-service/app/: client.py  main.py  models.py
m3/fastapi-service/tests/: test_client.py  test_main.py
m3/gin-service/: go.mod  main.go  main_test.go
